# twStockAllInOne

./:  Definition  COMMON.py  TWStock.py  basicCompany.py  dividend.py  dividend_100_110.csv  ldbydate.py  loadData.py  main.py  peratio.py  pyproject.toml  revenue.py  twPFScore.py
DB/: mdb.py
DataBase/: mongodb.py
Formula/: twPFScore.py  twValueStockScore.py
GoogleSheet/: load2GSheet.py
LoadData/: balanceSheet.py  comInfo.py  comprehensiveIncome.py  dividend.py  financialAnalysis.py  price.py  revenue.py
Public/: COMMON.py
class/: TWStock.py  basic.py
data/: DQ.csv  UPDATEDATE.csv  comInfo.csv  comprehensiveIncome.csv  dividend.csv  financialAnalysis.csv
day/: peratio.py  price.py
month/: revenue.py
old/: LastData.py
result/: PiotroskiFScore_2019.csv  PiotroskiFScore_20210129.csv  TWValueStockScore__20210129.csv
season/: financial.py
services/: analytics.py  common.py  crawl.py  formula.py  mongo.py  mongodb.py  stockInfo.py
services/Analytics/: bullStageCheck.py
services/Formula/: twPFScore.py  twValueStockScore.py
